# haskell-class

./: .gitignore  ChangeLog.md  LICENSE  README.md  haskell-class.cabal  lambda-calculus.md  package.yaml
.github/workflows/: haskell.yml
app/: Main.hs
data/RWH/: input-084.txt  output-084-3.txt  output-084-4.txt
hw-01/: credit-card-validation.hs  tower-of-hanoi.hs
hw-02/: rwh.hs
rwh/: p-060.hs  p-069.hs
src/: Utils.hs
src/HW01/: CreditCardValidation.hs  TowerOfHanoi.hs
src/HW03/: Golf.hs
src/HW04/: E1.hs  E2.hs  E3.hs  E4.hs
src/OBE/: P023.hs  P024.hs  P025.hs  P036.hs  P041.hs  P045.hs  P062.hs  P073.hs
src/RWH/: P060.hs  P069.hs  P070.hs  P084.hs  P097.hs  P098.hs
test/: Spec.hs
test/HW03/: HistogramTest.hs  LocalMaximaTest.hs  SkipsTest.hs  Test.hs
test/HW04/: E1Test.hs  E2Test.hs  E3Test.hs  E4Test.hs  Test.hs
test/OBE/: P025Test.hs  P036Test.hs  P041Test.hs  P045Test.hs  P062Test.hs  P073Test.hs  Test.hs
test/RWH/: P070Test.hs  P084Test.hs  P097Test.hs  P098Test.hs  Test.hs
